--- a/nuget.csproj
+++ b/nuget.csproj
@@ -13,12 +13,13 @@
 
   <ItemGroup>
     <Content Include="src\**\*" Exclude="**\bin\**\*;**\obj\**\*" />
+        <Content Include="apps\**\*" Exclude="**\bin\**\*;**\obj\**\*" />
     <Compile Remove="**\*" />
   </ItemGroup>
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <Version>1.0.2</Version>
+    <Version>1.0.4</Version>
     <PackageId>CleanArchitectureConsoleTemplate</PackageId>
     <Title>Clean Architecture Console Tempolate</Title>
     <Company>Sanddata</Company>
