--- a/nuget.csproj
+++ b/nuget.csproj
@@ -18,9 +18,9 @@
 
   <PropertyGroup>
     <PackageType>Template</PackageType>
-    <Version>1.0.9</Version>
+    <Version>1.0.10</Version>
     <PackageId>CleanArchitectureConsoleTemplate</PackageId>
-    <Title>Clean Architecture Console Tempolate</Title>
+    <Title>Clean Architecture Console Template</Title>
     <Company>Sanddata</Company>
     <Authors>Roy Sand</Authors>
     <Copyright>Sanddata © 2023</Copyright>
